Restores fieldset and correct spacing between inputs and option-sublists

--- a/UI/src/css/organisms/o-option-sublist.css
+++ b/UI/src/css/organisms/o-option-sublist.css
@@ -12,7 +12,7 @@ o-option-sublist {
 
 /* Special codes can follow many different question type controls, inside <o-response>. */
 o-response {
-    > * + o-option-sublist {
+    > fieldset > * + o-option-sublist {
         margin-block-start: var(--space-2);
     }
 }
